# LagerfeuerClearing

./: .gitignore  LagerFeuerCLIVersion.py  LagerFeuerGUIVersion.py  README.md  expense_data.json  lagerfeuer-cli  lagerfeuer-gui  pyproject.toml
.github/workflows/: test-and-lint.yml
lagerfeuer_clearing/: __init__.py  __main__.py
lagerfeuer_clearing/cli/: __init__.py  cli_app.py
lagerfeuer_clearing/core/: __init__.py  expense_manager.py
lagerfeuer_clearing/examples/: weekend_trip.py
lagerfeuer_clearing/gui/: __init__.py  gui_app.py
lagerfeuer_clearing/tests/: __init__.py  run_tests.py  test_expense_manager.py
